msg fix and allow environment to be /dev/null

--- a/lang/de_AT.po
+++ b/lang/de_AT.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opensesame 0.7.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-05 13:35+0000\n"
+"POT-Creation-Date: 2023-04-12 18:12+0000\n"
 "PO-Revision-Date: 2022-10-02 13:40+0200\n"
 "Last-Translator: Markus Raab <markus@libelektra.org>\n"
 "Language-Team: German <markus@libelektra.org>\n"
@@ -198,5 +198,5 @@ msgid "📴 OFF"
 msgstr "📴 ABGESCHALTEN"
 
 #: src/main.rs:571
-msgid "👋 opensesame {} bye-bye {:?}"
-msgstr "👋 Opensesame {} auf Wiedersehen {:?}"
+msgid "👋 opensesame {} bye-bye {}"
+msgstr "👋 Opensesame {} auf Wiedersehen {}"
