--- a/lang/opensesame.pot
+++ b/lang/opensesame.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-05 13:35+0000\n"
+"POT-Creation-Date: 2023-04-12 18:12+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -186,5 +186,5 @@ msgid "📴 OFF"
 msgstr ""
 
 #: src/main.rs:571
-msgid "👋 opensesame {} bye-bye {:?}"
+msgid "👋 opensesame {} bye-bye {}"
 msgstr ""
