Update book.toml & *.md

--- a/doc/MQ135.md
+++ b/doc/MQ135.md
@@ -1,4 +1,4 @@
-## Calibration
+# Calibration
 
 Actually not needed for latest approach (which only detects differences).
 
@@ -57,16 +57,18 @@ A0 connects
 
 typical output ~40 (37-44)
 breath output ~60
-
+```bash
 screen /dev/ttyACM0 9600
-
+```
 
 
 
 ## See also
 
 ¹ https://olimex.wordpress.com/2015/05/26/experimenting-with-gas-sensors-and-arduino/
+
 ² https://components101.com/sensors/mq135-gas-sensor-for-air-quality
+
 ³ https://www.codrey.com/electronic-circuits/how-to-use-mq-135-gas-sensor/
 
 - doesn't work well (not all MQ135 sensors are suitable)
