--- a/lang/de_AT.po
+++ b/lang/de_AT.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opensesame 0.7.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-20 06:18+0000\n"
+"POT-Creation-Date: 2023-10-21 04:51+0000\n"
 "PO-Revision-Date: 2022-10-02 13:40+0200\n"
 "Last-Translator: Markus Raab <markus@libelektra.org>\n"
 "Language-Team: German <markus@libelektra.org>\n"
@@ -117,23 +117,30 @@ msgstr "⌛ Timeout mit Sequenz {}"
 msgid "⌛ Sequence {} too long"
 msgstr "⌛ Zu lange Sequenz {}"
 
-#: src/clima_sensor_us.rs:404
-msgid "🌡️ Temperature above {} °C, close the window"
-msgstr "🌡️ Es hat über {} °C, Fenster schließen"
+#: src/clima_sensor_us.rs:304
+msgid "🌡️ High Temperature {} °C, close the window (Wind {} m/s)"
+msgstr "🌡️ Hohe Temperatur {} °C, Fenster schließen (Wind {} m/s)"
 
-#: src/clima_sensor_us.rs:409
-msgid "🌡️ Temperature above {} °C"
-msgstr "🌡️ Es hat über {} °C"
+#: src/clima_sensor_us.rs:309
+msgid "🌡️ Heat Alert {} °C, turn on PV cooling (Wind {} m/s)"
+msgstr "🌡️ Hitzewarnung {} °C, PV Kühlung einschalten (Wind {} m/s)"
 
-#: src/clima_sensor_us.rs:414
-msgid "🌡 Temperature below {} °C"
-msgstr "🌡️ Es hat unter {} °C"
+#: src/clima_sensor_us.rs:314
+msgid "🌡 Freezing Temperature, yield is in danger (Wind {} m/s)"
+msgstr "🌡 Gefrierpunkt, Ernte in Gefahr (Wind {} m/s)"
 
-#: src/clima_sensor_us.rs:417
-msgid "༄ Strong Wind {} km/h"
+#: src/clima_sensor_us.rs:317
+msgid "༄ Strong Wind {} m/s (Temperature: {} °C)"
+msgstr "༄  Starker Wind {} m/s (Temperatur: {} °C)"
+
+#: src/clima_sensor_us.rs:320
+msgid ""
+"🌡 ༄ Temperature {} °C and Wind {} m/s are moderate again, no warning present"
 msgstr ""
+"🌡 ༄ Temperatur {} °C und Wind {} m/s sind wieder moderat, Warnungen sind "
+"aufgehoben"
 
-#: src/clima_sensor_us.rs:432
+#: src/clima_sensor_us.rs:424
 msgid "⚠️ Error from weather station: {}"
 msgstr "⚠️ Ein Fehler ist beim ausführen der Wetterstation aufgetreten: {}"
 
@@ -221,9 +228,3 @@ msgstr "🚨 Befehl für Alarm empfangen"
 #: src/signals.rs:174
 msgid "🔔 Received bell"
 msgstr "🔔 Befehl für Glocke empfangen"
-
-#~ msgid "🌡️ Temperature above {} °C and no Wind"
-#~ msgstr "🌡️ Es hat über {} °C und es geht kein Wind"
-
-#~ msgid "🌡 Temperature again under {} °C, warning was removed"
-#~ msgstr "🌡 Es hat unter {} °C, die Warnung wurde entfernt"
